--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "private": true,
   "homepage": "https://usama-jamil.github.io/garage-info-app/",
   "dependencies": {
+    "firebase": "^5.8.2",
     "gh-pages": "^2.0.1",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-redux-firebase": "^2.2.6",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.3"
+    "react-scripts": "2.1.3",
+    "redux-firestore": "^0.6.3"
   },
   "scripts": {
     "predeploy": "npm run build",
